k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-desafio-app
  namespace: api-desafio
spec:
  selector:
    matchLabels:
      app: flask-desafio-app
  replicas: 1    
  template:
    metadata:
      labels:
        app: flask-desafio-app
    spec:
      containers:
        - name: flask-desafio-app
      image: flask-kubernetes
      ports:
        - containerPort: 8000
