k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-desafio-app
spec:
  type: LoadBalancer
  selector:
    app: flask-desafio-app
  ports:
  - port: 8000      
    targetPort: 8000
